--- a/ElementFactory/Views/Question/EditTestGet.cshtml
+++ b/ElementFactory/Views/Question/EditTestGet.cshtml
@@ -1,5 +1,5 @@
 ﻿@using ElementFactory.Models.Test;
-@model TestViewModel;
+@model EditTestViewModel;
 
 @{
     ViewBag.Title = "Редактирай тест";
@@ -7,8 +7,10 @@
 
 <form asp-controller="Question" asp-action="EditTestPost" method="post" id="editTestForm">
     <label asp-for="Title">Заглавие</label>
-    <input value="@Model.Title"/>
+    <input asp-for="Title" value="@Model.Title"/>
     <span asp-validation-for="Title"></span>
+
+    <input type="hidden" asp-for="@Model.Id" value="@Model.Id"/>
 
     <label asp-for="Category">Категория</label>
     <select asp-for="Category">
