--- a/ElementFactory/wwwroot/css/site.css
+++ b/ElementFactory/wwwroot/css/site.css
@@ -985,6 +985,11 @@ form td p
     font-size: 20px;
 }
 
+.addQuestionsOnOwnContainer h2{
+    color: white;
+    text-align: center;
+}
+
 .addQuestionsOnOwnFormContainer input{
     border-radius: 16px;
     border: 1px solid black;
