--- a/ElementFactory/Views/Question/AddQuestionsOnOwn.cshtml
+++ b/ElementFactory/Views/Question/AddQuestionsOnOwn.cshtml
@@ -1,6 +1,7 @@
 ﻿@using ElementFactory.Models.Others;
 @using ElementFactory.Data.Models;
 @using System.Text.Json;
+@using System.Text.Json.Serialization;
 
 @model AddQuestionsCurrentQuestionModel;
 
@@ -51,11 +52,10 @@
             {
                 <input type="hidden" asp-for="QuestionsJSON" name="QuestionsJSON" id="@i"
                        value="@JsonSerializer.Serialize(Model.Questions[i], new JsonSerializerOptions()
-            {
-                 ReferenceHandler = System.Text.Json.Serialization.ReferenceHandler.IgnoreCycles
-            })" />
+                       {
+                            ReferenceHandler = ReferenceHandler.IgnoreCycles
+                       })" />
             }
-
 
             <input class="addQuestionsOnOwnSubmitBtn" type="submit" value="Следващ въпрос" />
         </form>
@@ -65,6 +65,7 @@
         @{
             int questionCounter = 1;
         }
+
         @foreach (Question question in Model.Questions)
         {
             int answerCounter = 1;
