--- a/ElementFactory/Views/Role/SeeAllUsers.cshtml
+++ b/ElementFactory/Views/Role/SeeAllUsers.cshtml
@@ -57,7 +57,7 @@
                         if (currentUser.IsRequested)
                         {
                             <a class="userButton" asp-route-id="@currentUser.Id" asp-controller="Role" asp-action="MakingATeacher">
-                                Удобряване на заявка
+                                Одобряване на заявка
                             </a>
                         }
                         else
