--- a/ElementFactory/Views/Flashcard/EditFlashcard.cshtml
+++ b/ElementFactory/Views/Flashcard/EditFlashcard.cshtml
@@ -9,23 +9,22 @@
     <partial name="_ValidationScriptsPartial" />
 }
 
-<h2 class="text-center">@ViewBag.Title</h2>
-<hr />
 
-<div class="row">
-    <form method="post">
-        <div class="form-group">
-            <div class="mb-3">
-                <label asp-for="Title"></label>
-                <input asp-for="Title" class="form-control" placeholder="Напишете новият въпрос тука...">
-                <span asp-validation-for="@Model.Title" class="small text-danger"></span>
+<div>
+    <h2 class="text-center white-color-title">@ViewBag.Title</h2>
+    <form method="post" id="editFlashcardForm">
+        <div class="main-flex-edit-flashcard">
+            <div class="flex-edit-flashcard-div">
+                <label asp-for="Title">Въпрос</label>
+                <input asp-for="Title" placeholder="Напишете новия въпрос тук...">
+                <span asp-validation-for="@Model.Title"></span>
             </div>
-            <div class="mb-3">
-                <label asp-for="Content"></label>
-                <input asp-for="Content" class="form-control" placeholder="Напишете новият отговор тука...">
-                <span asp-validation-for="@Model.Content" class="small text-danger"></span>
+            <div class="flex-edit-flashcard-div">
+                <label asp-for="Content">Отговор</label>
+                <input asp-for="Content" placeholder="Напишете новия отговор тук...">
+                <span asp-validation-for="@Model.Content"></span>
             </div>
         </div>
-        <input class="btn btn-primary mt-3" type="submit" value="Редактирай" />
+        <input class="btn btn-warning" type="submit" value="Редактирай" />
     </form>
 </div>
