--- a/ElementFactory/Views/Flashcard/AddFlashcard.cshtml
+++ b/ElementFactory/Views/Flashcard/AddFlashcard.cshtml
@@ -6,22 +6,23 @@
 @section Scripts{
     <partial name="_ValidationScriptsPartial"/>
 }
+<h2 class="text-center">@ViewBag.Title</h2>
+<hr />
 
-<div>
-    <h2 class="text-center white-color-title">@ViewBag.Title</h2>
-    <form method="post" id="addFlashcardForm">
-        <div class="main-flex-add-flashcard">
-            <div class="flex-add-flashcard-div">
-                <label asp-for="Title" >Въпрос</label>
-                <input asp-for="Title" placeholder="Въведи въпрос...">
-                <span asp-validation-for="@Model.Title"></span>
+<div class="row">
+    <form method="post">
+        <div class="form-group">
+            <div class="mb-3">
+                <label asp-for="Title">Въпрос</label>
+                <input asp-for="Title" class="form-control" placeholder="Въведи въпрос...">
+                <span asp-validation-for="@Model.Title" class="small text-danger"></span>
             </div>
-            <div class="flex-add-flashcard-div">
+            <div class="mb-3">
                 <label asp-for="Content">Отговор</label>
-                <input asp-for="Content" placeholder="Въведи отговор...">
-                <span asp-validation-for="@Model.Content"></span>
+                <input asp-for="Content" class="form-control" placeholder="Въведи отговор...">
+                <span asp-validation-for="@Model.Content" class="small text-danger"></span>
             </div>
-            <input class="btn btn-primary mt-3" type="submit" value="Създай" />
         </div>
+        <input class="btn btn-primary mt-3" type="submit" value="Създай" />
     </form>
 </div>
