--- a/ElementFactory/Views/Shared/_Layout.cshtml
+++ b/ElementFactory/Views/Shared/_Layout.cshtml
@@ -12,28 +12,28 @@
 </head>
 <body>
     <header class="appHeader">
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom  box-shadow mb-3 " style="background-color: #6A1B9A;">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Welcome">ElementFactory</a>
+                <a class="navbar-brand text-white" asp-area="" asp-controller="Home" asp-action="Welcome">ElementFactory</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>              
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between ">
+                    <ul class="navbar-nav flex-grow-1 text-white">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="LoadTable">Начало</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="LoadTable">Начало</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Question" asp-action="Classes">Тестове и Въпроси</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Question" asp-action="Classes">Тестове и Въпроси</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Flashcard" asp-action="ViewAllFlashcards">Флашкарти</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Flashcard" asp-action="ViewAllFlashcards">Флашкарти</a>
                         </li>
                         @if(User.IsInRole("Admin")){
 
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Role" asp-action="SeeAllUsers">Всички потребители</a>
+                                <a class="nav-link text-white" asp-area="" asp-controller="Role" asp-action="SeeAllUsers">Всички потребители</a>
                             </li>
                         } 
                     </ul>
