--- a/ElementFactory/Views/Shared/_LoginPartial.cshtml
+++ b/ElementFactory/Views/Shared/_LoginPartial.cshtml
@@ -9,21 +9,21 @@
 @if (signInManager.IsSignedIn(User) && user!=null)
 {
     <li class="nav-item">
-       <a class="nav-link text-dark" asp-controller="User" asp-action="LoadProfile" asp-route-id="@user.Id">Моят профил</a>
+       <a class="nav-link text-white" asp-controller="User" asp-action="LoadProfile" asp-route-id="@user.Id">Моят профил</a>
     </li>
     <li class="nav-item">
             <form class="form-inline" asp-controller="User" asp-action="Logout" asp-area="Identity" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-dark">Излизане</button>
+            <button  type="submit" class="nav-link btn btn-link text-white">Излизане</button>
         </form>
     </li>
 }
 else
 {
     <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-controller="User" asp-action="Register">Регистриране</a>
+            <a class="nav-link text-white" asp-area="Identity" asp-controller="User" asp-action="Register">Регистриране</a>
     </li>
     <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-controller="User" asp-action="Login">Влизане</a>
+            <a class="nav-link text-white" asp-area="Identity" asp-controller="User" asp-action="Login">Влизане</a>
     </li>
 }
 </ul>
