--- a/ElementFactory/Views/Flashcard/ViewAllFlashcards.cshtml
+++ b/ElementFactory/Views/Flashcard/ViewAllFlashcards.cshtml
@@ -4,16 +4,17 @@
 @{
     ViewBag.Title = "Моите флашкарти";
 }
-<div class="whiteFlashcardTitle">
-    <h2 class="text-center flex-white-child-title-flashcard">@ViewBag.Title</h2>
-</div>
-
-<div class="container-add-flashcard-viewAll">
-    <a asp-controller="Flashcard" asp-action="AddFlashcard" class="btn-primary btn-allFlashcards-add">Добави флашкарта</a>
-</div>
 
 @if (Model.Count() > 0)
 {
+    <div class="whiteFlashcardTitle">
+        <h2 class="text-center flex-white-child-title-flashcard">@ViewBag.Title</h2>
+    </div>
+
+    <div class="container-add-flashcard-viewAll">
+        <a asp-controller="Flashcard" asp-action="AddFlashcard" class="btn-primary btn-allFlashcards-add">Добави флашкарта</a>
+    </div>
+
     <div class="mainViewAllFlashcardsContainer">
         @foreach (FlashcardViewModel flashcard in Model)
         {
@@ -58,7 +59,13 @@
 }
 else
 {
-    <p class="text-center">Няма флашкарти</p>
+    <div class="whiteFlashcardTitle">
+        <h2 class="text-center flex-white-child-title-flashcard">Няма флашкарти</h2>
+    </div>
+
+    <div class="container-add-flashcard-viewAll">
+        <a asp-controller="Flashcard" asp-action="AddFlashcard" class="btn-primary btn-allFlashcards-add">Добави флашкарта</a>
+    </div>
 }
 
 <script>
