--- a/ElementFactory/Views/Home/Welcome.cshtml
+++ b/ElementFactory/Views/Home/Welcome.cshtml
@@ -1,5 +1,17 @@
 ﻿@{
     ViewBag.Title = "Добре дошли";
+    string action = "";
+    string controller = "";
+    if (User.Identity.IsAuthenticated)
+    {
+        action = "LoadTable";
+        controller = "Home";
+    }
+    else
+    {
+        action = "Register";
+        controller = "User";
+    }
 }
 <div class="welcomePageContainer">
     <header>
@@ -39,7 +51,7 @@
                 </div>
             </div>
             <section class="hyperlink">
-                <a asp-action="LoadTable" asp-controller="Home">Какво чакаш? Да започваме!</a>
+                <a asp-action="@action" asp-controller="@controller">Какво чакаш? Да започваме!</a>
             </section>
         </div>
     </main>
