--- a/ElementFactory/Views/Question/EditTestGet.cshtml
+++ b/ElementFactory/Views/Question/EditTestGet.cshtml
@@ -1,4 +1,6 @@
 ﻿@using ElementFactory.Models.Test;
+@using ElementFactory.Models.Question;
+@using ElementFactory.Models.Answer;
 @model EditTestViewModel;
 
 @{
@@ -19,6 +21,46 @@
         <option>10 клас</option>
         <option>11-12 клас</option>
     </select>
+    @{
+        int counter = 1;
+    }
+    @for (int i = 0; i < Model.Questions.Count; i++)
+    {
+        var question = Model.Questions[i];
+        <div>
+            @if (counter < 10)
+            {
+                <h3>Въпрос 0@(counter)</h3>
+            }
+            else
+            {
+                <h3>Въпрос @(counter)</h3>
+            }
+            <label asp-for="Questions[i].Description">Описание</label>
+            <input asp-for="Questions[i].Description" value="@question.Description" />
+
+            <label asp-for="Questions[i].CorrectAnswer">Верен отговор</label>
+            <input asp-for="Questions[i].CorrectAnswer.Value" value="@question.CorrectAnswer.Value" />
+
+            <input type="hidden" asp-for="Questions[i].Id" value="@question.Id" />
+
+            @for (int j = 0; j < question.Answers.Count; j++)
+            {
+                var answer = question.Answers[j];
+
+                <label asp-for="Questions[i].Answers[j].Value">Отговор</label>
+                <input asp-for="Questions[i].Answers[j].Value" value="@answer.Value" />
+
+                <input type="hidden" asp-for="Questions[i].Answers[j].Id" value="@answer.Id"/>
+            }
+        </div>
+        counter++;
+    }
 
     <input type="submit" value="Запази промените!" />
 </form>
+
+
+<script>
+    document.getElementsByTagName('body')[0].classList.add('scrollClass');
+</script>
