--- a/ElementFactory/Views/Question/TestsByGrade.cshtml
+++ b/ElementFactory/Views/Question/TestsByGrade.cshtml
@@ -16,18 +16,21 @@
                        asp-route-id="@test.Id">
                         Започни тест!
                     </a>
-                    <form method="get"
-                          asp-controller="Question"
-                          asp-action="EditTestGet"
-                          asp-route-id="@test.Id">
-                          <input type="submit" value="Редактирай тест!" />
-                    </form>
-                    <form method="post"
-                          asp-controller="Question"
-                          asp-action="DeleteTest"
-                          asp-route-id="@test.Id">
-                        <input type="submit" value="Изтрий тест!" />
-                    </form>
+                    @if (!User.IsInRole("Student"))
+                    {
+                        <form method="get"
+                              asp-controller="Question"
+                              asp-action="EditTestGet"
+                              asp-route-id="@test.Id">
+                            <input type="submit" value="Редактирай тест!" />
+                        </form>
+                        <form method="post"
+                              asp-controller="Question"
+                              asp-action="DeleteTest"
+                              asp-route-id="@test.Id">
+                            <input type="submit" value="Изтрий тест!" />
+                        </form> 
+                    }
                 </div>
             </div>
         }
@@ -39,9 +42,12 @@ else
 }
 
 <div class="testsByGradeBtns">
-    <div class="testsByGradeAdd">
-        <a asp-controller="Question" asp-action="AddTestGet" class="addTestToDbBtn">Добави тест</a>
-    </div>
+    @if (!User.IsInRole("Student"))
+    {
+        <div class="testsByGradeAdd">
+            <a asp-controller="Question" asp-action="AddTestGet" class="addTestToDbBtn">Добави тест</a>
+        </div>
+    }
     <div class="returnToClass">
         <a asp-controller="Question" asp-action="Classes" class="returnToClassesBtn">Избери клас отново</a>
     </div>
