--- a/ElementFactory/Views/User/Register.cshtml
+++ b/ElementFactory/Views/User/Register.cshtml
@@ -8,7 +8,7 @@
 
 <div class="row">
     <div class="col-md-4 offset-md-4">
-        <form id="registerForm" method="post">
+        <form id="registerForm" method="post" class="block-form">
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="text-center mb-3">
