--- a/ElementFactory/Views/Shared/_Layout.cshtml
+++ b/ElementFactory/Views/Shared/_Layout.cshtml
@@ -21,21 +21,28 @@
                 </button>              
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between ">
                     <ul class="navbar-nav flex-grow-1 text-white">
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="LoadTable">Начало</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Question" asp-action="Classes">Тестове и Въпроси</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Flashcard" asp-action="ViewAllFlashcards">Флашкарти</a>
-                        </li>
-                        @if(User.IsInRole("Admin")){
-
+                        @if (User.Identity.IsAuthenticated)
+                        {
                             <li class="nav-item">
-                                <a class="nav-link text-white" asp-area="" asp-controller="Role" asp-action="SeeAllUsers">Всички потребители</a>
+                                <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="LoadTable">Начало</a>
                             </li>
-                        } 
+                            <li class="nav-item">
+                                <a class="nav-link text-white" asp-area="" asp-controller="Question" asp-action="Classes">Тестове и Въпроси</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" asp-area="" asp-controller="Flashcard" asp-action="ViewAllFlashcards">Флашкарти</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" asp-area="" asp-controller="Leaderboard" asp-action="LoadLeaderboard">Класация</a>
+                            </li>
+                            @if (User.IsInRole("Admin"))
+                            {
+
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" asp-area="" asp-controller="Role" asp-action="SeeAllUsers">Всички потребители</a>
+                                </li>
+                            }
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
