--- a/ElementFactory/Views/Shared/_Layout.cshtml
+++ b/ElementFactory/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ElementFactory.styles.css" asp-append-version="true" />
+    <link rel="icon" href="/images/logo.png" type="image/x-icon">
 </head>
 <body>
     <header class="appHeader">
